RESOLVED FIXED73463
fix printing on Mac
https://bugs.webkit.org/show_bug.cgi?id=73463
Summary fix printing on Mac
Robin Dunn
Reported 2011-11-30 10:08:54 PST
Created attachment 117209 [details] fix wxGCDC use for printing Use the wxGCDC(wxGraphicsContext) constructor on Mac as well to avoid issues with the wxGCDC(wxPrinterDC) constructor.
Attachments
fix wxGCDC use for printing (1.45 KB, patch)
2011-11-30 10:08 PST, Robin Dunn
kevino: review+
kevino: commit-queue-
Kevin Ollivier
Comment 1 2011-11-30 11:28:18 PST
Landed in r101536, thanks!
Note You need to log in before you can comment on or make changes to this bug.