Use the wxGCDC(wxGraphicsContext) constructor on Mac as well to avoid issues with the wxGCDC(wxPrinterDC) constructor. https://bugs.webkit.org/show_bug.cgi?id=73463

Reviewed by Kevin Ollivier.


Canonical link: https://commits.webkit.org/90017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101536 268f45cc-cd09-0410-ab3c-d52691b4dbfc